tests/parser/errors/invalid_array_syntaxe.ray
// Variable declaration are used to synchronize the parser

array[5
var a = 0
[1 56
var a = 0
[1, 3

